--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background:
+      linear-gradient(
+      #b8c4cf,
+      #212529),
+      url(https://meridiano70.co/wp-content/uploads/2020/08/avion-650x435-1.jpg) no-repeat center center fixed;
+      background-size: cover;
+  }
