--- a/src/presentation/app/modules/main/index/index.component.html
+++ b/src/presentation/app/modules/main/index/index.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">Welcome to newshore air App</h5>
-          <a class="btn btn-primary" routerLink="security">Get into</a>
+          <a class="btn btn-primary" routerLink="home">Get into</a>
         </div>
         <div class="card-footer text-muted">
         </div>
