--- a/src/presentation/app/modules/home/components/footer/footer.component.html
+++ b/src/presentation/app/modules/home/components/footer/footer.component.html
@@ -7,6 +7,6 @@
         <li class="nav-item"><a class="nav-link px-2 text-body-secondary">FAQs</a></li>
         <li class="nav-item"><a class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
-      <p class="text-center text-body-secondary text-light">&copy; 2023 Budget Management, Inc</p>
+      <p class="text-center text-body-secondary text-light">&copy; 2023 Newshore, Inc</p>
     </div>
   </div>
