--- a/src/presentation/app/modules/home/pages/main-home/main-home.component.html
+++ b/src/presentation/app/modules/home/pages/main-home/main-home.component.html
@@ -1,45 +1,66 @@
-<div class="container ps-1 ms-1 pe-0 me-0">
-    <div class="header pe-1 me-3">
+<div class="container total-area">
+    <div class="header mt-2">
         <nsair-header></nsair-header>
     </div>
     
     
     <div class="content">
         <div class="row container mt-1">
-            <div class="col-3 ps-0 ms-0 me-2">
+            <div class="col-3 ps-0 ms-0 me-2 mt-2 bg-body-secondary">
                 
                 
-                <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
+                <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 280px;">
 
                     <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-                    <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-                    <span class="fs-5 fw-semibold">Menu</span>
+                    <span class="fs-5 fw-semibold">Search for your trip</span>
                     </a>
 
-                    <form id="usuarioForm" (ngSubmit)="send()" [formGroup]="flightForm">
+                    <form id="flightForm" (ngSubmit)="send()" [formGroup]="flightForm" class="was-validated">
 
-                        <div class="collapse show" id="home-collapse">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="Origin" formControlName="origin">
-                            <label for="floatingInput">Origin</label>
+                            <input type="text" class="form-control" id="floatingInput1" placeholder="Origin" formControlName="origin" required>
+                            <label for="floatingInput1">Origin</label>
                         </div>
+                        <div *ngIf="flightForm?.get('origin')?.invalid && (flightForm?.get('origin')?.dirty || flightForm?.get('origin')?.touched)" class="error-message">
+                            <p class="text-danger" *ngIf="flightForm?.get('origin')?.errors?.['required']">This field is required.</p>
+                            <p class="text-danger" *ngIf="flightForm?.get('origin')?.errors?.['minlength'] || flightForm?.get('origin')?.errors?.['maxlength']">You must enter exactly 3 letters.</p>
                         </div>
 
-                        <div class="collapse show" id="home-collapse">
+                        
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="Destination" formControlName="destination">
+                            <input type="text" class="form-control" id="floatingInput" placeholder="Destination" formControlName="destination" required>
                             <label for="floatingInput">Destination</label>
                         </div>
+                        <div *ngIf="flightForm?.get('destination')?.invalid && (flightForm?.get('destination')?.dirty || flightForm?.get('destination')?.touched)" class="error-message">
+                            <p class="text-danger" *ngIf="flightForm?.get('destination')?.errors?.['required']">This field is required.</p>
+                            <p class="text-danger" *ngIf="flightForm?.get('destination')?.errors?.['minlength'] || flightForm?.get('destination')?.errors?.['maxlength']">You must enter exactly 3 letters.</p>
                         </div>
 
-                        <div class="collapse show" id="home-collapse">
+                        
                         <div class="form-floating mb-3">
-                            <input type="number" class="form-control" id="floatingInput" placeholder="Number of flights" formControlName="limit">
-                            <label for="floatingInput">Number of flights</label>
+                            <input type="number" class="form-control" id="floatingInput" placeholder="Number of flights" formControlName="limit" min="0" required>
+                            <label for="floatingInput"> Number of flights </label>
                         </div>
+                        <div *ngIf="flightForm?.get('limit')?.invalid && (flightForm?.get('limit')?.dirty || flightForm?.get('limit')?.touched)" class="error-message">
+                            <p class="text-danger" *ngIf="flightForm?.get('limit')?.errors?.['required']">This field is required.</p>
+                            <p class="text-danger" *ngIf="flightForm?.get('limit')?.errors?.['minlength'] || flightForm?.get('limit')?.errors?.['maxlength']">You must enter exactly 3 letters.</p>
                         </div>
 
-                        <button type="button" class="btn btn-primary" type="submit" form="usuarioForm" [disabled]="flightForm.invalid">Search</button>
+                        <div class="form-floating mb-3">
+                            <select class="form-select" id="floatingSelect" aria-label="Floating label select example" formControlName="currency" required>
+                                
+                                <option value="USD">USD</option>
+                                <option value="EUR">EUR</option>
+                                <option value="COP">COP</option>
+                            </select>
+                            <label for="floatingSelect">Select currency</label>
+                            <span class="form-text text-danger mensajeAlert" *ngIf="flightForm.get('currency')?.hasError('required') && flightForm.get('currency')?.touched ">
+                                Currency is requerid
+                            </span>
+                        </div>
+                        
+
+                        <button type="button" class="btn btn-primary" type="submit" form="flightForm" [disabled]="flightForm.invalid">Search</button>
 
                     </form>
                 </div>
@@ -48,8 +69,8 @@
 
             </div>
     
-            <div class="col" >
-                <nsair-table [flights]="flights"></nsair-table>
+            <div class="col mt-2" >
+                <nsair-table [flights]="flights" [currencySelected]="currencySelected" [totalPrice]="totalPrice" *ngIf="flights.length > 0"></nsair-table>
             </div>
         </div>
     </div>
