--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 body {
     background:
       linear-gradient(
-      #b8c4cf,
-      #212529),
+      #ffffffcd,
+      #b9b7b9cc),
       url(https://meridiano70.co/wp-content/uploads/2020/08/avion-650x435-1.jpg) no-repeat center center fixed;
       background-size: cover;
   }
