--- a/src/presentation/app/modules/home/components/header/header.component.html
+++ b/src/presentation/app/modules/home/components/header/header.component.html
@@ -7,8 +7,13 @@
           <li><a class="nav-link px-2 text-white">
             Welcome
           </a></li>
-          <li><a href="home" class="nav-link px-2 text-secondary">Home</a></li>
+          <li><a href="home" class="nav-link px-2 text-white">Home</a></li>
         </ul>
+
+        <div class="text-end">
+          <img id="logo"
+          src="https://media.licdn.com/dms/image/C4D0BAQGN6PO6kMDBuA/company-logo_200_200/0/1657805371089?e=2147483647&v=beta&t=NO7LJyFlrJGLARsWLUWrgjjjlcfi-ZOWcfTlc5Gn6kA" alt="logo">
+        </div>
 
       </div>
 
